--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <title>Page Title</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
-var token = 'IGQVJXNzd3R241em0tVk13UEcyNWswcWZA0V0lEUHBTT1FuYkgzOURiRnA2anB6Mmhpb2I2UExKcTg3U1RZAcWJYN3NtUERlcmFUTmxFSlN4V3VxTFJQaDFrX1dQYks2ZA2ZAVZA2FCN2U1aW5QdEFsVldqbQZDZD',
-    hashtag='snowy', // hashtag without # symbol
+var token = 'IGQVJVNmhBaTlUeUh5Tmx3Ykdad2tRLTh4VVdsSTk0T0x3OUpUNHo0THhWSHg3TGpnWEN6OTJZAQ2tiNE15eEVIcnJOeVY3dGdMbnl0aTBVeHZAOWlcxQ3FXNF9wZAU1KLVUzbEk2QUZApMEZAVTEhQSVdiOAZDZD',
+    hashtag='snow', // hashtag without # symbol
     num_photos = 4;
  
 $.ajax({
