--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Page Title</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
-var token = 'a9e526a21dd24e486f7371d2a5a33c4f',
+var token = 'AQD7Nmg7QkntwjZ8Dzec8hGv6SteLz3o41RMx2OjcQSHoK9gsfQmkdslVFT-HhV2-AdH1XhfGRZ2S_boFASrBqFLJXRbtVm7EB8D51bsRZ7odGnrVIb8vAX6mbSETOH1EagWECNbiheQdY1BhokqGQ5ttsVDJwnEZQBTW-FCDgGQziBWE17CjZ36UXoNVdj5kAeDXtl0pYIHp6UKVODvoFqDy9ZjRaNhAu1hrVCv9Ri3EA#_',
     hashtag='snow', // hashtag without # symbol
     num_photos = 4;
  
